# TLPILearning

./: README.md
fileio/: CMakeLists.txt
fileio/data/: dst01.txt  src01.txt  tfile02
fileio/src/: Test.c  bad_exclusive_open.c  checkDup.c  copy.c  cp.c  fcntlTest.c  large_file.c  lseekTest.c  m_readv_writev.c  seek_io.c  t_readv.c  t_readv_writev.c  tee.c
fileio/src/homework/C4/: cp.c  tee.c
fileio/src/homework/C5/: appendTest.c  atomic_append.c  m_dup2.c  m_large_file.c
lib/: README.md  ename.c.inc  error_functions.c  get_num.c  get_num.h  tlpi_hdr.h
memalloc/: CMakeLists.txt
memalloc/src/: free_and_sbrk.c  m_malloc_free.c
pipes/: CMakeLists.txt
pipes/src/: l02  lsfile  pipe_ls_wc_2.c
proc/: CMakeLists.txt
proc/src/: SETJMP_VARS  display_env.c  longjmp.c  m_set_unset_env.c  mem_segments.c  modify_env.c  setjmp_vars.c  setjmp_vars.s  wrong_jmp.c
procexec/: CMakeLists.txt
procexec/src/: t_fork.c  test.c
signals/: CMakeLists.txt
signals/src/: catch_rtsigs.c  demo_SIGFPE.c  intquit.c  nonreentrant.c  ouch.c  sig_receiver.c  sig_sender.c  sigmask_longjmp.c  signal.c  signal_functions.c  signal_functions.h  signals_block.c  t_kill.c  t_sigaltstack.c  t_sigqueue.c  t_sigsuspend.c  t_sigwaitinfo.c  test.c
time/: CMakeLists.txt
time/src/: calendar_time.c  curr_time.c  curr_time.h  process_time.c  strtime.c
user_groups/: CMakeLists.txt
user_groups/src/: source.c  ugid_functions.c  ugid_functions.h
